# ray-tracer-challenge

./: .gitignore  BaseTuple.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Color.h  Matrix.h  README.md  Transformations.cpp  Transformations.h  Tuple.cpp  Tuple.h  color.h  main.cpp  render_benchmark.cpp  test.cpp  util.h  vcpkg.json
src/: BaseTuple.cpp  BaseTuple.h  BoundingBox.cpp  BoundingBox.h  Bounds.cpp  Bounds.h  CSG.cpp  CSG.h  Camera.cpp  Camera.h  Canvas.h  CheckerPattern.cpp  CheckerPattern.h  Color.cpp  Color.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  GradientPattern.cpp  GradientPattern.h  Group.cpp  Group.h  Intersection.cpp  Intersection.h  IntersectionComputation.cpp  IntersectionComputation.h  Material.cpp  Material.h  Matrix.h  Pattern.cpp  Pattern.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  Ray.cpp  Ray.h  (+27 more)
tests/: bounding_box_test.cpp  bounds_test.cpp  camera_test.cpp  canvas_test.cpp  color_test.cpp  cone_test.cpp  csg_test.cpp  cube_test.cpp  cylinder_test.cpp  group_test.cpp  intersection_test.cpp  lights_test.cpp  material_test.cpp  matrix_test.cpp  pattern_test.cpp  plane_test.cpp  ray_test.cpp  shape_test.cpp  smooth_triangle_test.cpp  sphere_test.cpp  test.cpp  transformations_test.cpp  triange_test.cpp  triangle_test.cpp  tuple_test.cpp  wavefront_obj_test.cpp  world_test.cpp
